Update Topalian Game Engine Video Navigator - YouTube Edition.html

--- a/Topalian Game Engine Video Navigator - Youtube Edition 001/Topalian Game Engine Video Navigator - YouTube Edition.html
+++ b/Topalian Game Engine Video Navigator - Youtube Edition 001/Topalian Game Engine Video Navigator - YouTube Edition.html
@@ -26,11 +26,17 @@
 -->
 
 <!-- See the Code in Action
-    https://collegeofscripting.weebly.com/
+   https://collegeofscripting.weebly.com/bdaboxingexcuses.html
  -->
 
 <!-- See the Video Tutorials
+    https://www.youtube.com/watch?v=ms2zaBYY0M4
+
     https://youtube.com/scriptingcollege 
+-->
+
+<!-- See the College Website Home Page
+    https://collegeofscripting.weebly.com/
 -->
 
 <!-- See the GitHub Page for TGEVN
